# DiversityLens

./: .gitignore  404.html  CHANGELOG.md  Demographic_Results.csv  LICENSE  README.md  dashboard.html  diversitylens.def  ground_truth_comparison.py  index.html  intersectional_analysis.py  mkdocs.yml  objects.inv  pyproject.toml  requirement.txt  requirements.txt  requirements_doc.txt  resume_veli_ates.tex  setup.py  versions.json
.github/workflows/: docs.yml  lint.yml  publish.yml  release.yml  tests.yml
0.1.0-test/: objects.inv
0.1.0-test/license/: index.html
0.1.0-test/search/: search_index.json
API/: index.html
about/: index.html
dev/: 404.html  index.html  objects.inv
dev/API/: index.html
dev/about/: index.html
dev/license/: index.html
dev/search/: search_index.json
develop/: objects.inv
develop/search/: search_index.json
docs/: API.md  README.md  about.md  index.md  license.md
feature_publish-mkdocs/: index.html  objects.inv
feature_publish-mkdocs/API/: index.html
feature_publish-mkdocs/search/: search_index.json
latest/: 404.html  index.html
latest/API/: index.html
latest/search/: search_index.json
license/: index.html
mkdocs/: mkdocs.yml
results/: output.html
search/: search_index.json
src/: CsvWriter.py  analyzer.py  data_writing.py  dataset_loader.py  demographic_estimator.py  face_detector.py  logger.py  main.py  visualization.py
stable/: 404.html
tests/: ground_truth_comparison.py  test_data_writing.py  test_demographic_estimator.py  test_loader.py  test_pipeline.py  test_visualization.py
