[project]
name = "diversitylens"
version = "0.1.0"
description = "Analyze datasets of human faces for demographic diversity metrics"
requires-python = ">=3.10"
dependencies = [
    "deepface>=0.0.93,<1.0",
    "tf-keras>=2.16,<3.0",
    "pandas>=2.0,<3.0",
    "bokeh>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mike>=2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
